# game_engine_wgpu

./: Cargo.toml  README.md  justfile  run.ps1  run.sh
assets/: config.config  config.toml
assets/cells/: blood.cell  blood_stone.cell  blood_stone.toml  donut_stone.cell  just_tap.cell  just_tap.toml  sand.cell  sand.toml  stone.cell  stone.toml  water.cell  water.toml
assets/shaders/: compute_render.wgsl  shader.wgsl
src/: app.rs  app_state.rs  camera.rs  constants.rs  enums.rs  instance_data.rs  main.rs  objects.rs  utils.rs  world.rs
src/enums/: cell_assets.rs
src/objects/: sand.rs
src/shaders/: instancing.wgsl  shader.wgsl
