[package]
name = "game_engine_wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.28"
env_logger = "0.11.3"
log = "0.4"
wgpu = {version = "0.18", features = ["glsl"]}
pollster = "0.3.0"
glam = {version = "0.26.0", features = ["bytemuck"]}
bytemuck = {version = "1.14.3", features = ["derive"]}

[build]
rustflags = ["-Z", "threads=8"]