[package]
name = "game_engine_wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.28"
env_logger = "0.11.3"
log = "0.4"
wgpu = {version = "0.18", features = ["glsl"]}
pollster = "0.3.0"
glam = {version = "0.27.0", features = ["bytemuck"]}
bytemuck = {version = "1.14.3", features = ["derive"]}
hashbrown = {version = "*", features = ["serde"]}
serde = {version="*", features=["derive"]}
serde_derive = "*"
ron = "0.8.1"
lazy_static = "1.4.0"
color-hex = "*"
ecolor = {features = ["serde", "bytemuck", "color-hex", "cint"], version="*"}
toml = "0.8.12"
turborand = "0.10.1"
egui-wgpu = "=0.25"

[build]
rustflags = ["-Z", "threads=8"]
